8010780: G1: Eden occupancy/capacity output wrong after a full GC

Move the calculation and recording of eden capacity to the start of a GC and print a detailed heap transition for full GCs.

Reviewed-by: tschatzl, jmasa